<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureBanking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_to">Recipient account</string>
    <string name="label_to">To</string>
    <string name="label_from">From</string>
    <string name="hint_from">Your account</string>
    <string name="hint_amount">Amount</string>
    <string name="label_amount">Amount</string>
    <string name="message_proceed">Would you like to proceed with this transaction?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

</resources>
