<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TransactionActivity"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_form_background"
        android:orientation="vertical"
        android:padding="@dimen/form_padding" >

        <TextView
            android:id="@+id/labelTo"
            style="@style/FormLabelStyle"
            android:text="@string/label_to" />

        <EditText
            android:id="@+id/editTextTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTo"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_marginRight="@dimen/form_horizontal_margin"
            android:layout_marginTop="@dimen/space"
            android:background="@color/grey"
            android:hint="@string/hint_to"
            android:inputType="number"
            android:padding="@dimen/edit_text_padding" />

        <TextView
            android:id="@+id/labelFrom"
            style="@style/FormLabelStyle"
            android:layout_below="@id/editTextTo"
            android:text="@string/label_from" />

        <EditText
            android:id="@+id/editTextFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelFrom"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_marginRight="@dimen/form_horizontal_margin"
            android:layout_marginTop="@dimen/space"
            android:background="@color/grey"
            android:hint="@string/hint_from"
            android:inputType="number"
            android:padding="@dimen/edit_text_padding" />

        <TextView
            android:id="@+id/labelAmount"
            style="@style/FormLabelStyle"
            android:layout_below="@id/editTextFrom"
            android:text="@string/label_amount" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelAmount"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_marginRight="@dimen/form_horizontal_margin"
            android:layout_marginTop="@dimen/space"
            android:background="@color/grey"
            android:hint="@string/hint_amount"
            android:inputType="number"
            android:padding="@dimen/edit_text_padding" />

        <TextView
            android:id="@+id/labelMessageProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextAmount"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_marginRight="@dimen/form_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/message_proceed"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelMessageProceed"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:text="@string/button_yes" />

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:text="@string/button_no" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>